Fix bug with overflow profile field

--- a/src/Component/Profile/Profile.module.scss
+++ b/src/Component/Profile/Profile.module.scss
@@ -1,6 +1,6 @@
 .profilePage {
   display: flex;
-  height: 100vh;
+  height: 100%;
   // background-color: #1C1C1D;
   color: #fff;
 }
